--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <span class="author">Made in France</span>
       </div>
            <div class="container", class="container img">
-          <contnair img src="plt4.png" alt="Article 1", class="btn-acheter">
-         <contnair img src="plt2.png" alt="Article 1", class="btn-acheter">
-        <contnair img src="plt3.png" alt="Article 1", class="btn-acheter">
+          <img src="plt4.png" alt="Article 1", class="btn-acheter", class="container img">
+         <img src="plt2.png" alt="Article 1", class="btn-acheter", class="container img">
+        <img src="plt3.png" alt="Article 1", class="btn-acheter", class="container img">
       </div>
     </main>
   </body>
