--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="container", class="container img">
-          <img src="plt4.png" alt="Article 1", class="btn-acheter", class="container img">
-         <img src="plt2.png" alt="Article 1", class="btn-acheter", class="container img">
-        <img src="plt3.png" alt="Article 1", class="btn-acheter", class="container img">
+           <div class="container", class="article img">
+          <img src="plt4.png" alt="Article 1", class="btn-acheter", class="article img">
+         <img src="plt2.png" alt="Article 1", class="btn-acheter", class="article img">
+        <img src="plt3.png" alt="Article 1", class="btn-acheter", class="article img">
       </div>
     </main>
   </body>
