--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="container", class="article.img">
-          <img src="plt4.png" alt="Article 1">
-         <img src="plt2.png" alt="Article 1">
+           <div class="article.img">
+          <img src="plt4.png" alt="Article 1", class="btn-acheter">
+         <img src="plt2.png" alt="Article 1", class="btn-acheter">
         <img src="plt3.png" alt="Article 1", class="btn-acheter">
       </div>
     </main>
