--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="article.img">
+           <div class="articl img">
           <img src="plt4.png" alt="Article 1", class="btn-acheter">
          <img src="plt2.png" alt="Article 1", class="btn-acheter">
         <img src="plt3.png" alt="Article 1", class="btn-acheter">
