--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <span class="author">Made in France</span>
       </div>
            <div class="articl img">
-          <img src="plt4.png" alt="Article 1", class="btn-acheter">
-         <img src="plt2.png" alt="Article 1", class="btn-acheter">
-        <img src="plt3.png" alt="Article 1", class="btn-acheter">
+          <img src="plt4.png" alt="Article 1">
+         <img src="plt2.png" alt="Article 1">
+        <img src="plt3.png" alt="Article 1">
       </div>
     </main>
   </body>
