--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="articl img">
+           <div class="container">
           <img src="plt4.png" alt="Article 1">
          <img src="plt2.png" alt="Article 1">
         <img src="plt3.png" alt="Article 1">
