--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="container">
+           <div class="article img">
           <img src="plt4.png" alt="Article 1">
-         <img src="plt2.png" alt="Article 1">
-        <img src="plt3.png" alt="Article 1">
       </div>
     </main>
   </body>
