--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       </div>
            <div class="article img">
           <img src="plt4.png" alt="Article 1">
+             <img src="plt3.png" alt="Article 1">
+             <img src="plt2.png" alt="Article 1">
       </div>
     </main>
   </body>
