--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <span class="author">Made in France</span>
       </div>
            <div class="">
-             <div class="container">
+             <div class="container im">
           <img src="plt4.png" alt="Article 1">
              <img src="plt3.png" alt="Article 1">
              <img src="plt2.png" alt="Article 1">
