--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
            <div class="">
              <div class="container im">
           <img src="plt4.png" alt="Article 1">
+               <div class="container im">
              <img src="plt3.png" alt="Article 1">
+                 <div class="container im">
              <img src="plt2.png" alt="Article 1">
       </div>
     </main>
