--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
       <span class="author">Made in France</span>
       </div>
            <div class="">
-             <div class="container im">
+             <div class="article img">
           <img src="plt4.png" alt="Article 1">
-               <div class="container im">
+               <div class="article img">
              <img src="plt3.png" alt="Article 1">
-                 <div class="container im">
+                 <div class="article img">
              <img src="plt2.png" alt="Article 1">
       </div>
     </main>
