--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="">
+           <div class="container">
              <div class="article img">
           <img src="plt4.png" alt="Article 1">
                <div class="article img">
