--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       <span class="author">Made in France</span>
       </div>
            <div class="container">
-             <div class="article img">
-          <img src="plt4.png" alt="Article 1">
-               <div class="article img">
-             <img src="plt3.png" alt="Article 1">
-                 <div class="article img">
-             <img src="plt2.png" alt="Article 1">
+             <div class="article img"
+        img src="plt4.png" alt="Article 1"
+               <iv class="article img"
+             img src="plt3.png" alt="Article 1"
+                 div class="article img"
+             img src="plt2.png" alt="Article 1"/div>
       </div>
     </main>
   </body>
