--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
       <span class="author">Made in France</span>
       </div>
            <div class="container">
-             <div class="article img">
-               <img src="plt4.png" alt="Article 1">
-               <img src="plt3.png" alt="Article 1">
-               <img src="plt2.png" alt="Article 1">
+               <img src="plt4.png" alt="Image 1">
+               <img src="plt3.png" alt="Image 2">
+               <img src="plt2.png" alt="Image 3">
       </div>
-           </div>
     </main>
   </body>
 </html>
