--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="container">
-               <img src="plt4.png" alt="Image1">
-               <img src="plt3.png" alt="Image2">
-               <img src="plt2.png" alt="Image3">
+          <div class="article">
+                <img src="plt4.png" alt="Article 1">
+                <h3>Malizola</h3>
+                <p>Elegant and luxuriou</p>
+</div>
+             <div class="article">
+                <img src="plt3.png" alt="Article 2">
+                <h3>Gandja</h3>
+                <p>Élégance and Versatility</p>
+</div>
+                <div class="article">
+                <img src="plt2.png" alt="Article 3">
+                <h3>Estegro</h3>
+                <p>Élégance Sportive & Polyvalent </p>
       </div>
     </main>
   </body>
