--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
     <main>
       <div class="quote">
-        <p>"Transform your space into a green oasis"</p>
+        <p>"Transform your space into a green oasis",color:#99ccff;</p>
         <br>
         <hr width="40px">
     </div>
