--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
                 <img src="plt4.png" alt="Article 1">
                 <h3.3>Malizola</h3.3>
                 <p>Elegant and luxuriou</p>
+            <button class="btn-acheter">Buy</button>
 </div>
              <div class="article">
                 <img src="plt3.png" alt="Article 2">
                 <h3.2>Gandja</h3.2>
                 <p>Élégance and Versatility</p>
+               <button class="btn-acheter">Buy</button>
 </div>
                 <div class="article">
                 <img src="plt2.png" alt="Article 3">
                 <h3.1>Estegro</h3.1>
                 <p>Élégance Sportive & Polyvalent </p>
+                  <button class="btn-acheter">Buy</button>
       </div>
     </main>
   </body>
