--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="article">
                 <img src="plt4.png" alt="Article 1">
             <br>
-                <h3.3>Malizola</h3.3>
+                <h3.3>l'inceste</h3.3>
                 <p>Elegant and luxuriou</p>
             <br>
             <button class="btn-acheter">Buy</button>
@@ -50,7 +50,7 @@
              <div class="article">
                 <img src="plt3.png" alt="Article 2">
                <br>
-                <h3.2>Gandja</h3.2>
+                <h3.2>Masturbine</h3.2>
                 <p>Élégance and Versatility</p>
                <br>
                <button class="btn-acheter">Buy</button>
@@ -58,7 +58,7 @@
                 <div class="article">
                 <img src="plt2.png" alt="Article 3">
                   <br>
-                <h3.1>Estegro</h3.1>
+                <h3.1>L'anuster</h3.1>
                 <p>Élégance Sportive & Polyvalent </p>
                   <br>
                   <button class="btn-acheter">Buy</button>
