--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <br>
       <br>
     
-          <div class="plantes">
+          <div class="article">
                 <img src="plt4.png" alt="Article 1">
             <br>
                 <h3.3>l'inceste</h3.3>
@@ -47,7 +47,7 @@
             <br>
             <button class="btn-acheter">Buy</button>
 </div>
-             <div class="plantes">
+             <div class="article">
                 <img src="plt3.png" alt="Article 2">
                <br>
                 <h3.2>Masturbine</h3.2>
@@ -55,7 +55,7 @@
                <br>
                <button class="btn-acheter">Buy</button>
 </div>
-                <div class="plantes">
+                <div class="article">
                 <img src="plt2.png" alt="Article 3">
                   <br>
                 <h3.1>L'anuster</h3.1>
