--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <br>
     
           <div class="article">
-                <img src="plt4.png" alt="Article 1">
+                <img src="plt4.png" height:50px, width:50px, alt="Article 1">
             <br>
                 <h3.3>l'inceste</h3.3>
                 <p>Elegant and luxuriou</p>
