--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 <p>Élégance Sportive & Polyvalent </p>
                   <br>
                   <button class="btn-acheter">Buy</button>
+                  
+                  <div class="container">
+    <img src="plt.png" alt="Image centrée">
+</div>
       </div>
     </main>
   </body>
