--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
             <br>
             <button class="btn-acheter">Buy</button>
 </div>
-             <div class="article &">
-                <img src="plt3.png" alt="Article 2">
+             <div class="container">
+                <img src="plt3.png" alt="Image centrée">
+               </div>
                <br>
                 <h3.2>Masturbine</h3.2>
                 <p>Élégance and Versatility</p>
                <br>
                <button class="btn-acheter">Buy</button>
-</div>
+      
                 <div class="article &">
                 <img src="plt2.png" alt="Article 3">
                   <br>
