--- a/index.html
+++ b/index.html
@@ -57,16 +57,12 @@
                <button class="btn-acheter">Buy</button>
       
                 <div class="article &">
-                <img src="plt2.png" alt="Article 3">
+                <src="plt2.png" alt="Article 3">
                   <br>
                 <h3.1>L'anuster</h3.1>
                 <p>Élégance Sportive & Polyvalent </p>
                   <br>
                   <button class="btn-acheter">Buy</button>
-                  
-                  <div class="container">
-    <img src="plt.png" alt="Image centrée">
-</div>
       </div>
     </main>
   </body>
