--- a/index.html
+++ b/index.html
@@ -39,31 +39,14 @@
       <br>
       <br>
     
-          <div class="article &">
-                <img src="plt4.png" height:50px, width:50px, alt="Article 1">
+          <div class="container">
+                <img src="plt4.png" alt="image-centrée">
             <br>
                 <h3.3>l'inceste</h3.3>
                 <p>Elegant and luxuriou</p>
             <br>
-            <button class="btn-acheter">Buy</button>
-</div>
-             <div class="container">
-                <img src="plt3.png" alt="Image centrée">
-               </div>
-               <br>
-                <h3.2>Masturbine</h3.2>
-                <p>Élégance and Versatility</p>
-               <br>
-               <button class="btn-acheter">Buy</button>
-      
-                <div class="article &">
-                <src="plt2.png" alt="Article 3">
-                  <br>
-                <h3.1>L'anuster</h3.1>
-                <p>Élégance Sportive & Polyvalent </p>
-                  <br>
-                  <button class="btn-acheter">Buy</button>
       </div>
+       <button class="btn-acheter">Buy</button>
     </main>
   </body>
 </html>
