--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
     
           <div class="container">
                 <img src="plt4.png" alt="image-centrée">
-                <h3.3>l'inceste</h3.3>
-            <br>
-                <p>Elegant and luxuriou</p>
+                <br><h3.3>l'inceste</h3.3>
+                <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
       </div>
