--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
             <br>
              <button class="btn-acheter">Buy</button>
       </div>
+      <div class="container">
+                <img src="plt2.png" alt="image-centrée">
+                <br><h3.3>l'inceste</h3.3>
+                <br><p>Elegant and luxuriou</p>
+            <br>
+             <button class="btn-acheter">Buy</button>
+      </div>
+      <div class="container">
+                <img src="plt3.png" alt="image-centrée">
+                <br><h3.3>l'inceste</h3.3>
+                <br><p>Elegant and luxuriou</p>
+            <br>
+             <button class="btn-acheter">Buy</button>
+      </div>
     </main>
   </body>
 </html>
