--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <br>
              <button class="btn-acheter">Buy</button>
       </div>
-      <div class="container">
+      <div class="container2">
                 <img src="plt2.png" alt="image-centrée">
                 <br><h3.3>l'inceste</h3.3>
                 <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
       </div>
-      <div class="container">
+      <div class="container3">
                 <img src="plt3.png" alt="image-centrée">
                 <br><h3.3>l'inceste</h3.3>
                 <br><p>Elegant and luxuriou</p>
