--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
              <button class="btn-acheter">Buy</button>
       </div>
       <br>
-      <div class="container2">
+      <div class="container">
                 <img src="plt2.png" alt="image-centrée">
                 <br><h3.2>l'inceste</h3.2>
                 <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
       </div>
-      <div class="container3">
+      <div class="container">
                 <img src="plt3.png" alt="image-centrée">
                 <br><h3.3>l'inceste</h3.3>
                 <br><p>Elegant and luxuriou</p>
