--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
           <div class="container">
                 <img src="plt4.png" alt="image-centrée">
-                <br><h3.1>l'inceste</h3.1>
+                <br><h3.1>LSD</h3.1>
                 <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
@@ -49,14 +49,14 @@
       <br>
       <div class="container">
                 <img src="plt2.png" alt="image-centrée">
-                <br><h3.2>l'inceste</h3.2>
+                <br><h3.2>cocaine</h3.2>
                 <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
       </div>
       <div class="container">
                 <img src="plt3.png" alt="image-centrée">
-                <br><h3.3>l'inceste</h3.3>
+                <br><h3.3>Heroine</h3.3>
                 <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
