--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
           <div class="container">
                 <img src="plt4.png" alt="image-centrée">
-                <br><h3.>LSD</h3.>
+                <br><h3>LSD</h3>
                 <br><p>Elegant and luxuriou</p>
             <br>
              <button class="btn-acheter">Buy</button>
