--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <br><h3>LSD</h3>
                 <br><p>Elegant and luxuriou</p>
             <br>
-             <button class="btn-acheter">Buy</button>
+             <button class="acheter">Buy</button>
       </div>
       <br>
       <div class="container">
@@ -52,14 +52,14 @@
                 <br><h4>cocaine</h4>
                 <br><p>Elegant and luxuriou</p>
             <br>
-             <button class="btn-acheter">Buy</button>
+             <button class="acheter">Buy</button>
       </div>
       <div class="container">
                 <img src="plt3.png" alt="image-centrée">
                 <br><h5>Heroine</h5>
                 <br><p>Elegant and luxuriou</p>
             <br>
-             <button class="btn-acheter">Buy</button>
+             <button class="acheter">Buy</button>
       </div>
     </main>
   </body>
