--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
     </svg>
   </label>
 </div>
+      <div class="loader"></div>
+      <div class="loader"></div>
        </div>
     </main>
   </body>
